@@ -330,7 +330,7 @@ export(twinstim)
 export(simEpidataCS)
 export(siaf,
        siaf.constant, siaf.step,
-       siaf.gaussian,
+       siaf.gaussian, siaf.exponential,
        siaf.powerlaw, siaf.powerlaw1, siaf.powerlawL, siaf.student)
 export(tiaf,
        tiaf.constant, tiaf.step,
